--- a/mobile-ui/src/main/res/layout/contact_browser_fragment.xml
+++ b/mobile-ui/src/main/res/layout/contact_browser_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnAddContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Load contact list in here"
